# lokc-app

./: .gitignore  biome.json  components.json  package.json  tsconfig.json  vite.config.js
src/: layout.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/header/: header.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/progress/: progress.svelte
src/lib/utils/: logger.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
