[package]
name = "lokc-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Rodrigo Matuz <rodrigosantoslima1311@gmail.com>"]
repository = "https://github.com/Rodrigo-Matuz/lokc-app"
edition = "2021"

[lib]
name = "lokc_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
